Item1772: second pass; time for the artists to step in, I suspect....
git-svn-id: http://svn.foswiki.org/trunk@4304 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/lib/Foswiki/Configure/resources/styles.css
+++ b/core/lib/Foswiki/Configure/resources/styles.css
@@ -15,6 +15,8 @@ a.error {
     background-color:#FFD9D9; /* pink */
     border-bottom:1px solid #f00;
 }
+.keys { 
+}
 .mandatory,
 .mandatory input {
     color:green;
@@ -22,7 +24,7 @@ a.error {
     font-weight: bold;
 }
 .mandatory {
-    border-bottom:1px solid green;
+    /*border-bottom:1px solid green;*/
 }
 .mandatory input {
     font-weight:normal;
@@ -73,9 +75,31 @@ table.extensionsTable .installed a:visited {
 	background:#ffffd6;
 }
 
+/* Settings and other stuff only shown in expert mode */
 .expert {
-  background-color: #eED0CC;
+  background-color: #edc;
 }
 
+/* Stuff *not* shown in expert mode */
+.notExpert {
+  background-color: #edc;
+}
+
+/* Settings shown to everyone */
 .newbie { 
+}
+
+.row {
+  width: 99;
+  clear: both;
+}
+.firstCol {
+  position: relative;
+  clear: both;
+  float:left;
+  width: 25%;
+}
+.secondCol { 
+  width: 75%;
+  float: right;
 }
