--- a/core/lib/Foswiki/Configure/resources/tabs.css
+++ b/core/lib/Foswiki/Configure/resources/tabs.css
@@ -1,69 +1,17 @@
-ul.tabnav {
-  text-align: left; /* set to left, right or center */
-  margin: 1em 0 1em 0; /* set margins as desired */
-/*  font: bold 11px verdana, arial, sans-serif; /* set font as desired */
-  font-weight: bold;
-  list-style-type: none;
-  padding: 3px 10px 3px 10px; /* THIRD number must change with respect to padding-top (X) below */
-  line-height: 28px;
-}
 
-ul.tabnav li {
-  display: inline;
-}
-
-/* basic settings for all tab links */
-ul.tabnav li a {
-  padding: 3px 4px; /* set padding (tab size) as desired; FIRST number must change with respect to padding-top (X) above */
-  border: 1px solid #ddd; /* set border COLOR as desired; usually matches border color specified in #tabnav */
-  background-color: #ddd; /* unselected tab background */
-  color: #999; /* unselected tab text */
-  margin-right: 5px; /* set additional spacing between tabs as desired */
-  text-decoration: none;
- /* border-bottom: none;*/
-  border-style: outset;
-}
-
-/* Unselected but problem */
-ul.tabnav li a.warn {
-  color: #f88; /* pink */
-}
+/* Runtime-configured tab styles, generated when the page is built */
 
 /* selected LI */
 %TABLI% {
-/*  border-bottom: 4px solid #ccc; /* set border color to page background color */
-  background-color: #fff; /* set background color to match above border color */
+  background-color: #fff;
 }
 
 /* selected LI A */
 %TABLIA% {
-  background-color: #fff; /* set selected tab background color as desired */
+  background-color: #fff;
   color: #000; /* set selected tab link color as desired */
   position: relative;
-  top: 0px; /* offset from the others */
-  padding-top: 4px; /* must change with respect to padding (X) above and below */
+  top: 0px;
+  padding-top: 4px;
   border-style: inset;
-}
-
-ul.tabnav a:hover { /* settings for hover effect */
-  background: #fff; /* set desired hover color */
-}
-
-/* An individual LI for a tab */
-.tabli { 
-  /*Adjust left and right margins as required */
-}
-
-div.tooltip {
-  display: none;
-}
-
-.tabBodyVisible { 
-  display: block;
-  width: 100%;
-}
-
-.tabBodyHidden { 
-  display: none;
-  width: 100%;
 }
