Item1772: first shot at collapsing Plugins and Extensions, as Arthur suggested
git-svn-id: http://svn.foswiki.org/trunk@4328 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/lib/Foswiki/Configure/resources/styles.css
+++ b/core/lib/Foswiki/Configure/resources/styles.css
@@ -177,10 +177,10 @@ table.configureExtensionsTable .configureInstalled a:visited {
 	position:relative;
 	clear:both;
 	float:left;
-	width:25%;
+	width:29%;
 }
-.secondCol { 
-	width:75%;
+.configureSecondCol { 
+	width:69%;
 	float:right;
 }
 .section {
