--- a/core/lib/Foswiki/Configure/resources/tabs.css
+++ b/core/lib/Foswiki/Configure/resources/tabs.css
@@ -1,4 +1,4 @@
-ul.tabnav {
+ul.configureNavigation {
 	float:left;
 	list-style-type: none;
 	margin:0 0 2em 0;
@@ -7,18 +7,19 @@ ul.tabnav {
 	border-top:1px solid #d4e7f1;
 	border-bottom:1px solid #d4e7f1;
 }
-ul.tabnav li {
-}
-ul.tabnav li a {
+ul.configureNavigation li a {
 	display:block;
 	padding:.25em 1em;
 	text-decoration:none;
 	border-right:1px solid #d4e7f1;
 	border-left:1px solid #d4e7f1;
 }
-ul.tabnav li a:hover {
+ul.configureNavigation li a:hover {
 	background-color:#d4e7f1;
 	color:#1869a2;
+}
+ul.configureNavigation li a em {
+	font-style:normal;
 }
 
 /* selected LI */
