Item8202:    * fixed initialisation of treeview plugin on jquery-1.3.2    * fixed initialisation of chili syntax hiliter    * enhanced foswiki initialiser
git-svn-id: http://svn.foswiki.org/trunk@4370 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/JQueryPlugin/pub/System/JQueryPlugin/plugins/simplemodal/jquery.simplemodal.uncompressed.css
+++ b/JQueryPlugin/pub/System/JQueryPlugin/plugins/simplemodal/jquery.simplemodal.uncompressed.css
@@ -10,10 +10,14 @@
   width:auto;
 }
 #simplemodal-overlay {
+  /** for those that don't have support for opacity via css
   background-color:transparent;
   background-image:url(opacity40.png);
-  cursor:wait;
   opacity:1.0 !important;
+  */
+  cursor:wait;
+  background:#000;
+  opacity:0.4;
 }
 a.simplemodal-close {
   width:25px;
