--- a/core/lib/Foswiki/Configure/resources/styles.css
+++ b/core/lib/Foswiki/Configure/resources/styles.css
@@ -18,7 +18,6 @@
 /* Format of the 'changed from default' indicator */
 .configureDefaultValue {
 	font-size:86%;
-	line-height:1.5em;
 }
 
 /* Format of a tooltip div (see wz_tooltip.js for additional tooltip
@@ -46,16 +45,16 @@ li.configureExpert { /* menu item */
 /* --- SECTION --- */
 
 .configureRootSection {
-	line-height:1.3em;
 	float:right;
 	width:78%;
 	margin:0 0 1em 1%;
 }
 
 .configureSubSection {
-/*	float:right;*/!
-	width:78%;
-	margin:0 0 1em 1%;
+	margin:0 0 1em 0;
+}
+.configureSubSection h2 {
+	font-size:133%;
 }
 
 /* --- TABLE ROWS & COLUMNS --- */
@@ -92,7 +91,6 @@ table.configureSectionContents td {
 table.configureSectionContents td,
 table.configureSectionContents th {
 	padding:.35em 1em;
-	line-height:1.3em;
 	border-top:1px solid #d4e7f1;
 }
 
@@ -158,16 +156,13 @@ ul.configureRootTab li a em {
 
 ul.configureSubTab {
 	list-style-type:none;
-	text-align:left;
-	margin:1em 0 1em 0;
-	padding:3px 10px 3px 10px;
-	line-height:28px;
-	border:1px solid #d4e7f1;
+	margin:1em 0;
+	padding:0;
 }
-
 ul.configureSubTab li {
 	display:inline;
-	color:#06c;
+	margin:0;
+	padding:0;
 }
 
 /* basic settings for all tab links */
