Item1772: improve layout of setting notes
git-svn-id: http://svn.foswiki.org/trunk@4445 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/lib/Foswiki/Configure/resources/styles.css
+++ b/core/lib/Foswiki/Configure/resources/styles.css
@@ -210,6 +210,9 @@ a.configureError {
 .configureInfo {
 	color:green;
 }
+.configureSetting {
+	margin:.5em 0;
+}
 
 /* --- EXTENSIONS --- */
 table.configureExtensionsTable {
